# ai

./: .gitignore  README.md  index.html
agent_framework/msagent/: env.example  main.py  pyproject.toml
autogen/: INSTALL.md  README.md
autogen/demo/: team.json  team.py
autogen/demo/autogen2/: .env  01_chat.py  02_agent.py  04_team.py  05_mcp_workbench.py  06_mcp_fetch.py  07_mcp_server.py  08_mcp_client.py  assistant_agent.json  graph_flow.py  pyproject.toml  team.json  utils.py
autogen/resources/: shop.db  shop.py
code/: README.md
coding_agent/: AGENTS.md  README.md  docker-compose.yml  lab01.md  lab02.md  models.http  sound.py
continue/: README.md  project.md  prompt.md
dify/: README.md
dotnet/: README.md
hermes/: README.md  SOUL.md  lab_skills.md  onboarding.md
n8n/: README.md  RentalAgreement.txt  chain_agents.md  controller_agents.md  guardrails.md  parallel_agents.md  reactive_agents.md
ollama/: INSTALL.md  Modelfile  README.md  docker-compose.yml  ollama.http
prompt_engineering/: 04_instruction.md  06_anatomy_of_prompt.md  README.md  chain_of_thought.md  characater.md  few_shot.md  game.md  safety.md  stable_diffusion.md  suno.md  text_to_image.md  travel.md  zero_shot.md
prompt_flow/: README.md
semantic_kernel/: README.md  appsettings.json  workshop.md
tester/: README.md  docker-compose.yaml
vector/: README.md
vector/vectordb/: .env  01_sqlite.py  02_embedding.py  03_chroma.py  04_chroma_openai.py  05_qdrant.py  06_qdrant_openai.py  07_agent.py  docker-compose.yml  news.txt  pyproject.toml
webnn/: README.md
(+88 files in other folders)
